# 2DTO3D

./: .$数据库流程图（技术）.drawio.bkp  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.gradle  build.rs  diesel.toml  newoutput2.json  output.txt  settings.gradle  数据库流程图（技术）.drawio  数据库流程图（技术）.drawio.html
.github/workflows/: docker-image.yml
.run/: Docker 镜像.run.xml
2DTO3D-photosprocess/2DTO3D-photosprocess/photosprocess/src/: hsv_processing.rs  image_processing.rs  main.rs  photoprocesstest.rs  svg_generator.rs  transformation.rs
2DTO3D-photosprocess/2DTO3D-photosprocess/photosprocess/src/core/: svgbaseprocess.rs
PhotosProcesss/: Cargo.toml
assets/images/contours/: input.json  input2.json  newoutput2.json  outputtest.json  to_svg.py  体模生成函数封装.py  简单轮廓提取.py
assets/models/custom/model1/: license.txt
assets/models/custom/model2/: license.txt  scene.gltf
assets/models/custom/model_gltf/New_Modern_house/New_Modern_house/Model_DWT_DXF_DWG/: New_House.dwt  new_house.dwg  new_house.dxf
assets/models/custom/model_gltf/New_Modern_house/New_Modern_house/Model_obj/: new_house.mtl
assets/models/custom/model_gltf/New_Modern_house/New_Modern_house/Render_jpg/: Thumbs.db
assets/models/default/objmodel/: school.mtl
config/: color_model_mapping.json  hsv_color_range.json  test2.json
gradle/wrapper/: gradle-wrapper.properties
output/3d_models/: model_positions.json
output/mappings/: grid_mappings.json  mappings.json
photosprocess/: Cargo.toml  Dockerfile
photosprocess/assets/models/custom/model1/: scene.gltf
photosprocess/config/: test1.json
photosprocess/output/3d_models/: merged_model.mtl  model_positions.json
photosprocess/output/mappings/: mappings.json
photosprocess/src/: city_model.rs  colormodel.rs  controllers.rs  hex_utils.rs  hsv_processing.rs  lib.rs  main.rs  photoprocesstest.rs
photosprocess/src/controllers/: model_controller.rs  user_controller.rs
photosprocess/src/core_algorithm/: svgbaseprocess.rs
photosprocess/src/dbmanager/: db_connection.rs
photosprocess/src/file_path/: file_path_process.rs
photosprocess/src/filemanager/: file_save.rs
photosprocess/src/tests/: svg_test.rs
photosprocess/src/web/: mod.rs
src/: api1.rs  api_doc.rs  build.rs  colormodel.rs  config.rs  controllers.rs  core_algorithm.rs  dao.rs  entity.rs  hex_utils.rs  image_processing.rs  lib.rs  main.rs  models.rs  pool.rs  schema.rs  service.rs  svg_generator.rs  transformation.rs  utils.rs  web.rs
src/config/: routes.rs
src/controllers/: model_controller.rs  upload_controller.rs  user_controller.rs
src/core_algorithm/: build_city_model_independent.rs  model_generate.rs  svgbaseprocess.rs
src/dao/: CityDao.rs  CityModule.rs  FileDao.rs  FileModule.rs  ImageModule.rs  ModelDao.rs  ModelModule.rs  SvgDao.rs  UserModule.rs
src/dbmanager/: db_connection.rs
src/entity/: city.rs  file.rs  model.rs  svg.rs  user.rs
src/filemanager/: file_save.rs
src/main/java/com/example/back_3d/: Back3dApplication.java
src/main/resources/: application.properties
src/models/: entity.rs  request_models_dto.rs  response_modules_dto.rs
src/models/entity/: city.rs  file.rs  image.rs  map_info.rs  metadata.rs  model.rs  svg.rs  user.rs
src/models/request_models_dto/: FileProcess.rs  ModelProcess.rs  Svg.rs  UserLogin.rs
src/models/response_modules_dto/: models.rs  response_extract_contour.rs
src/pool/: app_state.rs  thread_pool.rs
src/service/: cities_management.rs  extract_contour.rs  file_manager.rs  model_api_integrate.rs  model_generate.rs  models_management.rs  session_cookie.rs  users_manage.rs  体模生成函数封装.py  简单轮廓提取.py
src/test/java/com/example/back_3d/: Back3dApplicationTests.java
src/utils/: Delaunay.py  extract_contour_script.py  python_script.py  test.py  video_convert.rs  三角剖分可视化.py  体模生成函数封装.py  凹凸形体模生成.py  回字形轮廓生成.py  简单轮廓提取.py
tests/: model_controller_test.rs  upload_controller_test.rs  user_controller_tests.rs
tmp/: video.webm
untitled/: package.json
