[package]
name = "photosprocess"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
imageproc = "0.25.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
svg= "0.17.0"
rusttype = "0.9.3"
roxmltree = "0.20.0"
unicode-segmentation = "1.11.0"
serde_derive = "1.0.204"
tobj = "4.0.2"
actix-web = "4.8.0"
clap= { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
actix-multipart = "0.7.2"
futures-util = "0.3.30"
sanitize-filename = "0.5.0"
actix-cors="0.7.0"
actix-files = "0.6.6"
futures = "0.3.30"
opencv = {version = "0.92.2", default-features = false,features = ["imgcodecs","imgproc","highgui","videoio"]}
lazy_static = "1.5.0"
anyhow = "1.0.86"
cc = "1.1.8"
gltf = "1.4.1"
fbxcel = "0.9.0"
fbxcel-dom = "0.0.10"
gltf-json = "1.4.1"
indexmap = "2.4.0"
zip = "2.2.0"
clang-sys = "1.8.1"
base64 = "0.22.1"
[lib]
name = "photosprocess"
path = "src/lib.rs"

#[[bin]]
#name="model_base_process"
#path = "src/bin/model_base_process.rs"
#
#[[bin]]
#name = "project_structure"
#path = "src/bin/project_structure.rs"
#
#[[bin]]
#name = "hsv_contour_detection"
#path = "src/bin/hsv_contour_detection.rs"
#
#[[bin]]
#name ="merge_model_fbx"
#path = "src/bin/merge_model_fbx.rs"
#
#[[bin]]
#name = "merge_model_gltf"
#path = "src/bin/merge_model_gltf.rs"

