[package]
name = "photosprocess"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
imageproc = "0.25.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
svg= "0.17.0"
rusttype = "0.9.3"
roxmltree = "0.20.0"
unicode-segmentation = "1.11.0"
serde_derive = "1.0.204"
tobj = "4.0.2"
actix-web = "4.8.0"
clap= "4.5.13"